--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>HTML Template</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+<header>
+  <h1>HTML Template</h1>
+</header>
 <body>
 
 </body>
