--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <header>
   <h1>HTML Template</h1>
 </header>
+
+<main>
+  <p>Lorem ipsum dolor sit amet.</p>
+  <img src="images/logo.svg" alt="">
+  <a href="http://www.wikipedia.org">Wikipedia</a>
+</main>
+
 <body>
 
 </body>
