--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML Template</title>
+  <title>HTML template</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<header>
-  <h1>HTML Template</h1>
-</header>
-
-<main>
-  <p>Lorem ipsum dolor sit amet.</p>
-  <img src="images/logo.svg" alt="">
-  <a href="http://www.wikipedia.org">Wikipedia</a>
-</main>
 
 <body>
+  <header>
+    <h1>HTML template</h1>
+  </header>
 
+  <main>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <img src="images/logo.svg" alt="">
+    <a href="http://www.wikipedia.org">Wikipedia</a>
+  </main>
 </body>
 </html>
